# floor_wiper

./: README  README.md
floor_wiper/: CMakeLists.txt  package.xml
floor_wiper/config/: control.yaml
floor_wiper/launch/: robot_simulation.launch  robot_visualize.launch
floor_wiper/scripts/: dirt_sensor.py  predictive_cleaner.py  robot_mover.py
floor_wiper/urdf/: floor_wiper.urdf
